kas.yml: enable debug-tweaks
add debug-tweaks to EXTRA_IMAGE_FEATURES. this enables passwordless
root login for testing purposes.

--- a/kas.yml
+++ b/kas.yml
@@ -34,6 +34,7 @@ bblayers_conf_header:
     LCONF_VERSION = "6"
     BBPATH = "${TOPDIR}"
     BBFILES ?= ""
+    EXTRA_IMAGE_FEATURES = "debug-tweaks"
 
 local_conf_header:
   standard: |
